--- a/Zaklady/Views/FootballMatch/FootballMatchResults.cshtml
+++ b/Zaklady/Views/FootballMatch/FootballMatchResults.cshtml
@@ -1,4 +1,4 @@
-﻿@model Zaklady.ViewModels.FootballMatchResultsViewModel
+﻿@model Zaklady.ViewModels.FootballMatchViewModel
 @{
     ViewBag.Title = "Uzupełnij wyniki meczu";
 }
@@ -8,12 +8,12 @@
     @Html.HiddenFor(m => m.id)
     <form>
         <div class="form-group">
-            <label for="HomeTeamGoals">Bramki gospodarzy:</label>
+            <label for="HomeTeamGoals">@Html.LabelFor(m=> m.HomeTeam):</label>
             @Html.TextBoxFor(m => m.HomeTeamGoals, new { @class = "form-control", placeholder = "np. 0" })
             @Html.ValidationMessageFor(m => m.HomeTeamGoals)
         </div>
         <div class="form-group">
-            <label for="AwayTeam">Bramki gości:</label>
+            <label for="AwayTeam">@Html.LabelFor(m => m.AwayTeam):</label>
             @Html.TextBoxFor(m => m.AwayTeamGoals, new { @class = "form-control", placeholder = "np. 3" })
             @Html.ValidationMessageFor(m => m.AwayTeamGoals)
         </div>
