--- a/Zaklady/Views/Home/Index.cshtml
+++ b/Zaklady/Views/Home/Index.cshtml
@@ -28,6 +28,9 @@
                 <span class="tournament">
                     @footballMatch.Torunament
                 </span>
+                <span class="button">
+                    <button class="btn btn-primary btn-sm" onclick="location.href='@Url.Action("AddBet", "FootballMatch", new {id = footballMatch.Id})'">Obstaw</button>
+                </span>
                 <div class="actions">
                     <a href="@Url.Action("EditFootballMatch", "FootballMatch", new { id = footballMatch.Id })">Edytuj</a>
                     |
