--- a/Zaklady/Views/Shared/_Layout.cshtml
+++ b/Zaklady/Views/Shared/_Layout.cshtml
@@ -20,6 +20,7 @@
             </div>
             <div class="navbar-collapse collapse">
                 <ul class="nav navbar-nav">
+                    <li>@Html.ActionLink("Ranking", "Index", "Home")</li>
                     <li>@Html.ActionLink("Moje zakłady", "Index", "Home")</li>
                     <li>@Html.ActionLink("Dodaj mecz", "CreateFootballMatch", "FootballMatch")</li>
                 </ul>
