#3 Fixing Bet and FootballMatch relations

--- a/Zaklady/Views/Home/Index.cshtml
+++ b/Zaklady/Views/Home/Index.cshtml
@@ -29,7 +29,7 @@
                     @footballMatch.Torunament
                 </span>
                 <span class="button">
-                    <button class="btn btn-primary btn-sm" onclick="location.href='@Url.Action("AddBet", "FootballMatch", new {id = footballMatch.Id})'">Obstaw</button>
+                    <button class="btn btn-primary btn-sm" onclick="location.href='@Url.Action("AddBet", "Bet", new {id = footballMatch.Id})'">Obstaw</button>
                 </span>
                 <div class="actions">
                     <a href="@Url.Action("EditFootballMatch", "FootballMatch", new { id = footballMatch.Id })">Edytuj</a>
