--- a/Zaklady/Views/Shared/_Layout.cshtml
+++ b/Zaklady/Views/Shared/_Layout.cshtml
@@ -21,7 +21,7 @@
             <div class="navbar-collapse collapse">
                 <ul class="nav navbar-nav">
                     <li>@Html.ActionLink("Ranking", "Index", "Home")</li>
-                    <li>@Html.ActionLink("Moje zakłady", "MyBets", "FootballMatch")</li>
+                    <li>@Html.ActionLink("Moje zakłady", "MyBets", "Bet")</li>
                     <li>@Html.ActionLink("Dodaj mecz", "CreateFootballMatch", "FootballMatch")</li>
                 </ul>
                 @Html.Partial("_LoginPartial")
