#3 Fixing Bet ViewModel

--- a/Zaklady/Views/Bet/MyBets.cshtml
+++ b/Zaklady/Views/Bet/MyBets.cshtml
@@ -20,7 +20,7 @@
             string selectedRow = "";
 
             <tr class="@selectedRow">
-                <td></td>
+                <td>@footballMatch.FootballMatch</td>
                 <td></td>
                 <td></td>
                 <td>@footballMatch.HomeTeamBetGoals</td>
