--- a/Zaklady/Views/Bet/AddBet.cshtml
+++ b/Zaklady/Views/Bet/AddBet.cshtml
@@ -2,7 +2,7 @@
 @{
     ViewBag.Title = "Obstaw wynik spotkania";
 }
-@using (Html.BeginForm("BetAScore", "Bet"))
+@using (Html.BeginForm(Model.Action, "Bet"))
 {<h3>Przewidywany wynik meczu:</h3>
     <form>
         <div class="form-group">
@@ -15,8 +15,7 @@
             @Html.TextBoxFor(m => m.AwayTeamBetGoals, new { @class = "form-control", placeholder = "0" })
             @Html.ValidationMessageFor(m => m.AwayTeamBetGoals)
         </div>
-        <a href="@Url.Action("BetAScore", "Bet", new { ViewMatchId = Model.MatchId })">Zapisz</a>
-
+        @Html.HiddenFor(m => m.MatchId, new { @class = "form-control" })
             <button type="submit" class="btn btn-primary">Save</button>
 </form>
 }
