--- a/Zaklady/Views/Home/Index.cshtml
+++ b/Zaklady/Views/Home/Index.cshtml
@@ -34,7 +34,7 @@
                 <div class="actions">
                     <a href="@Url.Action("EditFootballMatch", "FootballMatch", new { id = footballMatch.Id })">Edytuj</a>
                     |
-                    <a href="@Url.Action("RemoveFootballMatch", "FootballMatch", new { id = footballMatch.Id })">Usuń</a>
+                    <a href="@Url.Action("RemoveFootballMatchConfrimation", "FootballMatch", new { id = footballMatch.Id })">Usuń</a>
                     |
                     <a href="@Url.Action("FillFootballMatchResult", "FootballMatch", new { id = footballMatch.Id })">Dodaj wynik</a>
                 </div>
