--- a/Zaklady/Views/Bet/MyBets.cshtml
+++ b/Zaklady/Views/Bet/MyBets.cshtml
@@ -7,56 +7,114 @@
 <h2>Nadchodzące mecze:</h2>
 
 <table class="table">
-    <tr>
-        <th>Data:</th>
-        <th>Goście:</th>
-        <th>Gospodarze:</th>
-        <th>Obstawione bramki gości:</th>
-        <th>Obstawione bramki gospodarzy:</th>
+    <tr style="background-color:black; color:lightgray;">
+        <th><center>Data:</center></th>
+        <th><center>Goście:</center></th>
+        <th><center>Gospodarze:</center></th>
+        <th><center>Obstawione bramki gości:</center></th>
+        <th><center>Obstawione bramki gospodarzy:</center></th>
         <th></th>
     </tr>
-        @foreach (var footballMatch in Model)
+    @foreach (var footballMatch in Model)
+    {
+        if (footballMatch.Match.DateTime > DateTime.Now)
         {
-            string selectedRow = "";
-
-            <tr class="@selectedRow">
-                <td>@footballMatch.Match.DateTime</td>
-                <td>@footballMatch.AwayTeamBetGoals</td>
-                <td>@footballMatch.HomeTeamBetGoals</td>
-                <td></td>
-                <td></td>
-                <td>Edytuj</td>
-            </tr>                                           
+            <tr style="background-color:lightgray">
+                <td><center>@footballMatch.Match.DateTime.ToString("yyyy/MM/dd HH:mm")</center></td>
+                <td><center>@footballMatch.Match.AwayTeam</center></td>
+                <td><center>@footballMatch.Match.HomeTeam</center></td>
+                <td><center>@footballMatch.AwayTeamBetGoals</center></td>
+                <td><center>@footballMatch.HomeTeamBetGoals</center></td>
+                <td><a href="@Url.Action("EditBet", "Bet", new { id = footballMatch.BetId })">Edytuj&emsp;<span class="glyphicon glyphicon-pencil" aria-hidden="true"></span></a></td>
+            </tr>
         }
+    }
 </table>
+
+
 
 <h2>Mecze zakończone:</h2>
 
 <table class="table">
-    <tr>
-        <th>Data:</th>
+    <tr style="background-color:black; color:lightgray">
+        <th><center>Data:</center></th>
         <th>Goście:</th>
         <th>Gospodarze:</th>
-        <th>Bramki gości:</th>
-        <th>Bramki gospodarzy:</th>
-        <th>Obstawione bramki gości:</th>
-        <th>Obstawione bramki gospodarzy:</th>
-        <th>Punkty:</th>
+        <th><center>Bramki gości:</center></th>
+        <th><center>Bramki gospodarzy:</center></th>
+        <th><center>Obstawione bramki gości:</center></th>
+        <th><center>Obstawione bramki gospodarzy:</center></th>
+        <th><center>Punkty:</center></th>
     </tr>
     @foreach (var footballMatch in Model)
     {
-        string selectedRow = "";
+        if (footballMatch.Match.DateTime < DateTime.Now)
+        {
+            if (footballMatch.HomeTeamBetGoals == footballMatch.Match.HomeTeamGoals
+                && footballMatch.AwayTeamBetGoals == footballMatch.Match.AwayTeamGoals)
+            {
+                <tr class="success">
+                    <td>@footballMatch.Match.DateTime.ToString("yyyy/MM/dd HH:mm")</td>
+                    <td>@footballMatch.Match.AwayTeam</td>
+                    <td>@footballMatch.Match.HomeTeam</td>
+                    <td><center>@footballMatch.Match.AwayTeamGoals</center></td>
+                    <td><center>@footballMatch.Match.HomeTeamGoals</center></td>
+                    <td><center>@footballMatch.AwayTeamBetGoals</center></td>
+                    <td><center>@footballMatch.HomeTeamBetGoals</center></td>
+                    <td><center>@footballMatch.Match.PointsForBetingExactTeamScores</center></td>
+                </tr>
+            }
 
-        <tr class="@selectedRow">
-            <td></td>
-            <td></td>
-            <td></td>
-            <td></td>
-            <td></td>
-            <td></td>
-            <td></td>
-            <td></td>
-        </tr>
+            else if (
+                (
+                ((footballMatch.HomeTeamBetGoals > footballMatch.AwayTeamBetGoals) & (footballMatch.Match.AwayTeamGoals < footballMatch.Match.HomeTeamGoals))
+                | ((footballMatch.HomeTeamBetGoals == footballMatch.AwayTeamBetGoals) & (footballMatch.Match.AwayTeamGoals == footballMatch.Match.HomeTeamGoals))
+                | ((footballMatch.HomeTeamBetGoals < footballMatch.AwayTeamBetGoals) & (footballMatch.Match.AwayTeamGoals > footballMatch.Match.HomeTeamGoals))
+                )        
+                & (footballMatch.HomeTeamBetGoals != footballMatch.Match.HomeTeamGoals
+                &  footballMatch.AwayTeamBetGoals != footballMatch.Match.AwayTeamGoals)
+                )
+            {
+                <tr class="info">
+                    <td>@footballMatch.Match.DateTime.ToString("yyyy/MM/dd HH:mm")</td>
+                    <td>@footballMatch.Match.AwayTeam</td>
+                    <td>@footballMatch.Match.HomeTeam</td>
+                    <td><center>@footballMatch.Match.AwayTeamGoals</center></td>
+                    <td><center>@footballMatch.Match.HomeTeamGoals</center></td>
+                    <td><center>@footballMatch.AwayTeamBetGoals</center></td>
+                    <td><center>@footballMatch.HomeTeamBetGoals</center></td>
+                    <td><center>@footballMatch.Match.PointsForBetingMatchResult</center></td>
+                </tr>
+            }
+
+            else
+            {
+                <tr class="danger">
+                    <td>@footballMatch.Match.DateTime.ToString("yyyy/MM/dd HH:mm")</td>
+                    <td>@footballMatch.Match.AwayTeam</td>
+                    <td>@footballMatch.Match.HomeTeam</td>
+                    <td><center>@footballMatch.Match.AwayTeamGoals</center></td>
+                    <td><center>@footballMatch.Match.HomeTeamGoals</center></td>
+                    <td><center>@footballMatch.AwayTeamBetGoals</center></td>
+                    <td><center>@footballMatch.HomeTeamBetGoals</center></td>
+                    <td><center>0</center></td>
+                </tr>
+            }
+        };
     }
 </table>
+
+
+
+
+
+
+
+
+
+
+
+
+
+
 
