#5 Changes and updates to Main Page
- New Main Page
- Changes and updates to exsising views

--- a/Zaklady/Content/Site.css
+++ b/Zaklady/Content/Site.css
@@ -94,5 +94,9 @@ list-style: none;
     display: block;
 }
 
-
-
+.footballmatch > li .details .score 
+    {
+    position:absolute;
+    top:12px;
+    left: 250px;
+    }
