--- a/Zaklady/Views/Bet/MyBets.cshtml
+++ b/Zaklady/Views/Bet/MyBets.cshtml
@@ -25,7 +25,7 @@
                 <td><center>@footballMatch.Match.HomeTeam</center></td>
                 <td><center>@footballMatch.AwayTeamBetGoals</center></td>
                 <td><center>@footballMatch.HomeTeamBetGoals</center></td>
-                <td><a href="@Url.Action("EditBet", "Bet", new { id = footballMatch.BetId })">Edytuj&emsp;<span class="glyphicon glyphicon-pencil" aria-hidden="true"></span></a></td>
+                <td><a href="@Url.Action("EditBet", "Bet", new { id = footballMatch.BetId })">Edytuj</a></td>
             </tr>
         }
     }
