#6 Added name of user to registration form, updated layout

--- a/Zaklady/Content/bootstrap.css
+++ b/Zaklady/Content/bootstrap.css
@@ -3638,7 +3638,7 @@ tbody.collapse.in {
     left: auto;
   }
   .navbar-right .dropdown-menu-left {
-    right: auto;
+    right: 0;
     left: 0;
   }
 }
