--- a/Zaklady/Views/Ranking/RankingsIndex.cshtml
+++ b/Zaklady/Views/Ranking/RankingsIndex.cshtml
@@ -11,7 +11,7 @@
     @foreach (var user in Model.UsersList)
     {
         <tr>
-            <td>@user.UserName</td>
+            <td>@user.Name</td>
             <td>@user.Email</td>
             <td>@user.Email</td>
             <td>@user.Email</td>
