--- a/Zaklady/Views/FootballMatch/UpcomingEvents.cshtml
+++ b/Zaklady/Views/FootballMatch/UpcomingEvents.cshtml
@@ -1,46 +1,64 @@
-﻿@model IEnumerable<Zaklady.Models.FootballMatch>
+﻿@model PagedList.IPagedList<Zaklady.Models.FootballMatch>
+@using PagedList.Mvc;
+<link href="~/Content/PagedList.css" rel="stylesheet" type="text/css" />
 @{
     ViewBag.Title = "Home Page";
 }
 
-<ul class="footballmatch">
-    @foreach (var footballMatch in Model)
-    {
-        <li>
-            <div class="date">
-                <div class="month">
-                    @footballMatch.DateTime.ToString("MMM")
-                </div>
-                <div class="day">
-                    @footballMatch.DateTime.ToString("d ")
-                </div>
-            </div>
-            <div class="details">
-                <span class="hometeam">
-                    @footballMatch.HomeTeam
-                </span>
-                vs.
-                <span class="genre">
-                    @footballMatch.AwayTeam
-                </span>
-                <span class="hour">
-                    @footballMatch.DateTime.ToString("HH:mm")
-                </span>
-                <span class="tournament">
-                    @footballMatch.Torunament
-                </span>
-                <span class="button">
-                    <button class="btn btn-primary btn-sm" onclick="location.href='@Url.Action("AddBet", "Bet", new {id = footballMatch.Id})'">Obstaw</button>
-                </span>
-                <div class="actions">
-                    <a href="@Url.Action("EditFootballMatch", "FootballMatch", new { id = footballMatch.Id })">Edytuj</a>
-                    |
-                    <a href="@Url.Action("RemoveFootballMatchConfrimation", "FootballMatch", new { id = footballMatch.Id })">Usuń</a>
-                    |
-                    <a href="@Url.Action("FillFootballMatchResult", "FootballMatch", new { id = footballMatch.Id })">Dodaj wynik</a>
-                </div>
-            </div>
-        </li>
-    }
-</ul>
+@using (Html.BeginForm("UpcomingEvents", "FootballMatch", FormMethod.Get))
+{
 
+    <div class="upcoming-events">
+
+        <h2>Nadchodzące wydarzenia:</h2>
+        <br /><br />
+        <ul class="footballmatch">
+            @foreach (var footballMatch in Model)
+                {
+                <li>
+                    <div class="date">
+                        <div class="month">
+                            @footballMatch.DateTime.ToString("MMM")
+                        </div>
+                        <div class="day">
+                            @footballMatch.DateTime.ToString("d ")
+                        </div>
+                    </div>
+                    <div class="details">
+                        <span class="hometeam">
+                            @footballMatch.HomeTeam
+                        </span>
+                        vs.
+                        <span class="genre">
+                            @footballMatch.AwayTeam
+                        </span>
+                        <span class="hour">
+                            @footballMatch.DateTime.ToString("HH:mm")
+                        </span>
+                        <span class="tournament">
+                            @footballMatch.Torunament
+                        </span>
+                        <span class="button">
+                            <button class="btn btn-primary btn-sm" onclick="location.href='@Url.Action("AddBet", "Bet", new { id = footballMatch.Id })'">Obstaw</button>
+                        </span>
+                        <div class="actions">
+                            <a href="@Url.Action("EditFootballMatch", "FootballMatch", new { id = footballMatch.Id })">Edytuj</a>
+                            |
+                            <a href="@Url.Action("RemoveFootballMatchConfrimation", "FootballMatch", new { id = footballMatch.Id })">Usuń</a>
+                            |
+                            <a href="@Url.Action("FillFootballMatchResult", "FootballMatch", new { id = footballMatch.Id })">Dodaj wynik</a>
+                        </div>
+                    </div>
+                </li>
+
+            }
+
+        </ul>
+        <div>
+            Page @(Model.PageCount < Model.PageNumber ? 0 : Model.PageNumber) of @Model.PageCount
+
+            @Html.PagedListPager(Model, page => Url.Action("UpcomingEvents", new { page, sortOrder = ViewBag.CurrentSort, currentFilter = ViewBag.CurrentFilter }))
+        </div>
+    </div>
+}
+  
