#7 Updates to layout

--- a/Zaklady/Views/Ranking/RankingsIndex.cshtml
+++ b/Zaklady/Views/Ranking/RankingsIndex.cshtml
@@ -13,7 +13,7 @@
         <tr>
             <td>@user.Name</td>
             <td>@user.Email</td>
-            <td>@user.Email</td>
+            <td>@user.UserPoints</td>
             <td>@user.Email</td>
             <td>@user.Email</td>
 </tr>
