--- a/Zaklady/Content/Site.css
+++ b/Zaklady/Content/Site.css
@@ -102,17 +102,19 @@ textarea {
 .grid-container {
     display: flex;
     flex-wrap: wrap;
+    flex-direction: row;
+    justify-content: flex-start;
 }
 
 .grid-item {
     width: 100%;
-    margin-right: 5%;
+    margin-right: 0%;
     padding: 0px;
 }
 
 .grid-item-middle {
     width: auto;
-    margin-left: 20%;
+    margin-left: 0%;
     margin-right: 2%;
     padding: 50px;
 }
@@ -284,4 +286,36 @@ textarea {
     .nav-side-menu .menu-list .menu-content {
         display: block;
     }
+}
+
+@import "compass/css3";
+
+.wrapper {
+  display: -webkit-box;
+  display: -moz-box;
+  display: -ms-flexbox;
+  display: -webkit-flex;
+  display: flex;
+  -webkit-flex-flow: row wrap;
+  flex-flow: row wrap;
+}
+
+.wrapper > * {
+  padding: 10px;
+  flex: 1 100%;
+}
+
+@media all and (min-width: 600px) {
+  .aside { flex: 1 auto; }
+}
+
+@media all and (min-width: 800px) {
+  .main    { flex: 3 0px; }
+  .aside-1 { order: 1; } 
+  .aside-2 { order: 3; }
+  .footer  { order: 4; }
+}
+
+.main {
+  text-align: left;
 }
