--- a/Zaklady/Views/Shared/_Layout.cshtml
+++ b/Zaklady/Views/Shared/_Layout.cshtml
@@ -8,6 +8,7 @@
     @Scripts.Render("~/bundles/modernizr")
 </head>
 <body class="body-content">
+
     <div class="navbar navbar-inverse navbar-fixed-top">
         <div class="container">
             <div class="navbar-header">
@@ -29,61 +30,15 @@
             </div>
         </div>
     </div>
-    <div class="grid-container">
-        <div class="grid-item">
-            <sidebar>
-                <link href="//maxcdn.bootstrapcdn.com/font-awesome/4.2.0/css/font-awesome.min.css" rel="stylesheet">
-                <div class="nav-side-menu">
-                    <div class="brand">Brand Logo</div>
-                    <i class="fa fa-bars fa-2x toggle-btn" data-toggle="collapse" data-target="#menu-content"></i>
+    <div class="wrapper">
+            <aside class="aside">
+                @Html.Partial("Sidebar")
+            </aside>
 
-                    <div class="menu-list">
-
-                        <ul id="menu-content" class="menu-content collapse out">
-                            <li>
-                                <a href="#">
-                                    <i class="fa fa-dashboard fa-lg"></i> Strona główna
-                                </a>
-                            </li>
-
-                            <li data-toggle="collapse" data-target="#products" class="collapsed active">
-                                <a href="#"><i class="fa fa-globe fa-lg"></i> Wydarzenia <span class="arrow"></span></a>
-                            </li>
-                            <ul class="sub-menu collapse" id="products">
-                                <li class="active"><a href="#">Nadchodzące</a></li>
-                                <li><a href="#">Ostatnio zakończone</a></li>
-                                <li><a href="#">Dodane</a></li>
-                                <li><a href="#">Utwórz nowe</a></li>
-                                <li><a href="#">Zakończ wydarzenie</a></li>
-                            </ul>
-
-
-                            <li data-toggle="collapse" data-target="#service" class="collapsed">
-                                <a href="#"><i class="fa fa-globe fa-lg"></i> Moje zakłady <span class="arrow"></span></a>
-                            </li>
-                            <ul class="sub-menu collapse" id="service">
-                                <li>New Service 1</li>
-                                <li>New Service 2</li>
-                                <li>New Service 3</li>
-                            </ul>
-
-
-                            <li>
-                                <a href="#">
-                                    <i class="fa fa-user fa-lg"></i> Panel użytkownika
-                                </a>
-                            </li>
-
-                            </li>
-                        </ul>
-                    </div>
-                </div>
-            </sidebar>
+            <aside class="main">
+                @RenderBody()
+            </aside>
         </div>
-    </div>
-    <div class="grid-item-middle">
-        @RenderBody()
-    </div>
 
 
     <footer style="background: black; width:100%; float:left; padding:5px;">
