--- a/Zaklady/Content/Site.css
+++ b/Zaklady/Content/Site.css
@@ -1,12 +1,24 @@
-﻿body {
+﻿html {
+  height: 100%;
+  box-sizing: border-box;
+}
+
+body {
     padding-top: 25px;
     padding-bottom: 20px;
-    height:100%;
+    min-height:100%;
+    padding-bottom: 6rem;
+    position: relative;
 }
 
 footer {
-       position:absolute;
-   bottom:0;
+  position: absolute;
+  right: 0;
+  bottom: 0;
+  left: 0;
+  padding: 1rem;
+  background-color: black;
+  text-align: center;
 }
 
 /* Set padding to keep content from hitting the edges */
@@ -298,10 +310,10 @@ textarea {
   display: flex;
   -webkit-flex-flow: row wrap;
   flex-flow: row wrap;
+  margin-top: 5%;
 }
 
 .wrapper > * {
-  padding: 10px;
   flex: 1 100%;
 }
 
@@ -310,7 +322,7 @@ textarea {
 }
 
 @media all and (min-width: 800px) {
-  .main    { flex: 3 0px; }
+  .main    { flex: 3 0px; order: 2;}
   .aside-1 { order: 1; } 
   .aside-2 { order: 3; }
   .footer  { order: 4; }
@@ -318,4 +330,30 @@ textarea {
 
 .main {
   text-align: left;
+  margin-right: 5%;
+  margin-top: 5%;
+  height: 100%;
 }
+
+.aside{
+    margin-right: 0px;
+    height:100%;
+}
+
+table {
+    counter-reset: rowNumber;
+}
+
+table tr:not(:first-child) {
+    counter-increment: rowNumber;
+}
+
+table tr td:first-child::before {
+    content: counter(rowNumber);
+    min-width: 1em;
+    margin-right: 0.5em;
+}
+
+table tr:first-child +tr { background-color: gold; }
+
+tr:first-child + tr +tr { background-color: silver;}
