--- a/Zaklady/Views/FootballMatch/UpcomingEvents.cshtml
+++ b/Zaklady/Views/FootballMatch/UpcomingEvents.cshtml
@@ -5,8 +5,7 @@
     ViewBag.Title = "Home Page";
 }
 
-@using (Html.BeginForm("UpcomingEvents", "FootballMatch", FormMethod.Get))
-{
+<!--using (Html.BeginForm("UpcomingEvents", "FootballMatch", FormMethod.Get))-->
 
     <div class="upcoming-events">
 
@@ -60,5 +59,4 @@
             @Html.PagedListPager(Model, page => Url.Action("UpcomingEvents", new { page, sortOrder = ViewBag.CurrentSort, currentFilter = ViewBag.CurrentFilter }))
         </div>
     </div>
-}
   
