--- a/Zaklady/Views/Shared/_Layout.cshtml
+++ b/Zaklady/Views/Shared/_Layout.cshtml
@@ -1,5 +1,4 @@
 ﻿<!DOCTYPE html>
-<html>
 <head>
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -8,7 +7,6 @@
     @Scripts.Render("~/bundles/modernizr")
 </head>
 <body class="body-content">
-
     <div class="navbar navbar-inverse navbar-fixed-top">
         <div class="container">
             <div class="navbar-header">
@@ -31,24 +29,20 @@
         </div>
     </div>
     <div class="wrapper">
-            <aside class="aside">
-                @Html.Partial("Sidebar")
-            </aside>
+        <aside class="aside">
+            @Html.Partial("Sidebar")
+        </aside>
 
-            <aside class="main">
-                @RenderBody()
-            </aside>
-        </div>
-
-
-    <footer style="background: black; width:100%; float:left; padding:5px;">
-        <center><h6><font color="silver">Created by Artur Kulesza - ASP.NET 2016</font></h6></center>
-    </footer>
+        <aside class="main">
+            @RenderBody()
+        </aside>
+    </div>
 
     @Scripts.Render("~/bundles/jquery")
     @Scripts.Render("~/bundles/bootstrap")
     @RenderSection("scripts", required: false)
 
+    <footer class="footer">
+        <center><h6><font color="silver">Created by Artur Kulesza - ASP.NET 2016</font></h6></center>
+    </footer>
 </body>
-
-</html>
